--- a/src/styles/Home/OurPartners.scss
+++ b/src/styles/Home/OurPartners.scss
@@ -103,7 +103,7 @@
         height: 60px;
         font-size: 45px;
         color: #3f4d74;
-        font-family: "Rubik Moonrocks", sans-serif;
+        font-family: "Baskervville SC", sans-serif;
       }
 
       .heading{
