--- a/src/styles/Home/WhyVentory.scss
+++ b/src/styles/Home/WhyVentory.scss
@@ -114,7 +114,7 @@
         height: 60px;
         font-size: 45px;
         color: #3f4d74;
-        font-family: "Rubik Moonrocks", sans-serif;
+        font-family: "Baskervville SC", sans-serif;
       }
 
       .heading {
